# pcg_rand

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
benches/: benches.rs  criterion_benches.rs  ext32_bench.rs  ext32l_bench.rs  ext64_bench.rs  pcg32_bench.rs  pcg32l_bench.rs  pcg64_bench.rs
examples/: basic.rs  serialization.rs
old_benches/: ext32_bench.rs  ext32l_bench.rs  ext64_bench.rs  pcg32_bench.rs  pcg64_bench.rs
src/: bin.rs  custom_serialize.rs  extension.rs  extension.rs~  lib.rs  main.rs  multiplier.rs  numops.rs  outputmix.rs  seeds.rs  serialization.rs  stream.rs
src/extension/: extsizes.rs  mod.rs
tests/: advance_tests.rs  pcg32_tests.rs  pcg32l_tests.rs  pcg32unique_tests.rs  pcg64_tests.rs  pcg_basic_tests.rs
