[package]
name = "pcg_rand"
version = "0.9.0"
authors = ["Jeb Brooks <robojeb@robojeb.xyz>"]

homepage = "https://github.com/robojeb/pcg_rand"
repository = "https://github.com/robojeb/pcg_rand"
documentation = "https://docs.rs/pcg_rand/"

license = "Apache-2.0"

keywords = ["rand", "pcg"]

readme = "README.md"

description = "An implementation of the PCG family of random number generators in pure Rust"

[lib]
name = "pcg_rand"
path = "src/lib.rs"

[[bin]]
name = "pcg_demo"
path = "src/main.rs"

[dependencies]
rand = "0.5.0"
rand_core = "0.2.0"
num-traits = { version="0.2.3", features=["i128"]}
byteorder = "1.2.2"
log = "0.4.1"
