[package]
name = "pcg_rand"
version = "0.10.1"
authors = ["Jeb Brooks <robojeb@robojeb.xyz>"]

homepage = "https://github.com/robojeb/pcg_rand"
repository = "https://github.com/robojeb/pcg_rand"
documentation = "https://docs.rs/pcg_rand/"

license = "Apache-2.0"

keywords = ["rand", "pcg"]

readme = "README.md"

description = "An implementation of the PCG family of random number generators in pure Rust"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "robojeb/pcg_rand" }

[features]
default = ["u128"]
serde1 = ["serde", "serde_derive", "serde_json"]
u128 = ["rand/i128_support", "num-traits/i128"]

[lib]
name = "pcg_rand"
path = "src/lib.rs"

[dependencies]
rand = { version="0.6"}
rand_core = "0.3"
num-traits = { version="0.2.5"}
byteorder = "1.2.4"
serde = { version = "1", optional = true}
serde_derive = { version = "1", optional = true}
serde_json = { version="1", optional = true}
