[package]
name = "pcg_rand"
version = "0.12.0"
authors = ["Jeb Brooks <jeb@robojeb.dev>"]

homepage = "https://github.com/robojeb/pcg_rand"
repository = "https://github.com/robojeb/pcg_rand"
documentation = "https://docs.rs/pcg_rand/"

license = "Apache-2.0"

keywords = ["rand", "pcg"]

readme = "README.md"

description = "An implementation of the PCG family of random number generators in pure Rust"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "robojeb/pcg_rand" }

[features]
default = ["u128"]
serde1 = ["serde"]
u128 = ["num-traits/i128"]
no_deserialize_verify = []

[lib]
name = "pcg_rand"
path = "src/lib.rs"

[dependencies]
rand = { version="0.7"}
rand_core = "0.5"
num-traits = { version="0.2" }
byteorder = "1.2"
serde = { version = "1", optional = true, features=["derive"]}

[dev-dependencies]
serde_json = { version="1"}
